[project]
name = "rag-advanced"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "watchdog==6.0.0",
    "psycopg[binary]==3.3.4",
    "aiofiles==25.1.0",
    "langchain==1.3.10",
    "langchain-text-splitters==1.1.2",
    "langchain-ollama==1.1.0",
    "langchain-postgres==0.0.17",
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
]
